src/objects/VerifyTx__Cred__c.object
<CustomObject>
    <description>This object is used to store and handle the OAuth flow</description>
    <fields>
        <fullName>VerifyTx__Access_Token_Date__c</fullName>
        <label>Access Token Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Refersh_Token_Date__c</fullName>
        <label>Refersh Token Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VerifyTx__SF_User_Email__c</fullName>
        <label>SF User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VerifyTx__User_Related__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Related</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Creds</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cred</label>
    <nameField>
        <displayFormat>Cred-{0000}</displayFormat>
        <label>Cred Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>